--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.7.0",
     "autoprefixer": "^10.2.4",
     "browser-sync": "^3.0.2",
-    "eslint": "^9.6.0",
+    "eslint": "^9.7.0",
+    "globals": "^15.8.0",
     "html-validate": "^8.20.1",
     "mkdirp": "^3.0.1",
     "npm-run-all": "^4.1.5",
